Bug 604147: Make nsSMILTimedElement::GetNextInterval return PRBool instead of nsresult. r=birtles