content/smil/nsSMILTimedElement.cpp
@@ -511,8 +511,7 @@ nsSMILTimedElement::DoSampleAt(nsSMILTime aContainerTime, PRBool aEndOnly)
     case STATE_STARTUP:
       {
         nsSMILInterval firstInterval;
-        mElementState =
-         NS_SUCCEEDED(GetNextInterval(nsnull, nsnull, firstInterval))
+        mElementState = GetNextInterval(nsnull, nsnull, firstInterval)
          ? STATE_WAITING
          : STATE_POSTACTIVE;
         stateChanged = PR_TRUE;
@@ -556,8 +555,7 @@ nsSMILTimedElement::DoSampleAt(nsSMILTime aContainerTime, PRBool aEndOnly)
 
         if (mCurrentInterval->End()->Time() <= sampleTime) {
           nsSMILInterval newInterval;
-          mElementState =
-            NS_SUCCEEDED(GetNextInterval(mCurrentInterval, nsnull, newInterval))
+          mElementState = GetNextInterval(mCurrentInterval, nsnull, newInterval)
             ? STATE_WAITING
             : STATE_POSTACTIVE;
           if (mClient) {
@@ -1483,17 +1481,17 @@ nsSMILTimedElement::FilterInstanceTimes(InstanceTimeList& aList)
 // See:
 // http://www.w3.org/TR/2001/REC-smil-animation-20010904/#Timing-BeginEnd-LC-Start
 //
-nsresult
+PRBool
 nsSMILTimedElement::GetNextInterval(const nsSMILInterval* aPrevInterval,
                                     const nsSMILInstanceTime* aFixedBeginTime,
                                     nsSMILInterval& aResult) const
 {
   NS_ABORT_IF_FALSE(!aFixedBeginTime || aFixedBeginTime->Time().IsResolved(),
       "Unresolved begin time specified for interval start");
-  static nsSMILTimeValue zeroTime(0L);
+  static const nsSMILTimeValue zeroTime(0L);
 
   if (mRestartMode == RESTART_NEVER && aPrevInterval)
-    return NS_ERROR_FAILURE;
+    return PR_FALSE;
 
   // Calc starting point
   nsSMILTimeValue beginAfter;
@@ -1516,8 +1514,9 @@ nsSMILTimedElement::GetNextInterval(const nsSMILInterval* aPrevInterval,
   while (PR_TRUE) {
     // Calculate begin time
     if (aFixedBeginTime) {
-      if (aFixedBeginTime->Time() < beginAfter)
-        return NS_ERROR_FAILURE;
+      if (aFixedBeginTime->Time() < beginAfter) {
+        return PR_FALSE;
+      }
       // our ref-counting is not const-correct
       tempBegin = const_cast<nsSMILInstanceTime*>(aFixedBeginTime);
     } else if ((!mAnimationElement ||
@@ -1527,8 +1526,9 @@ nsSMILTimedElement::GetNextInterval(const nsSMILInterval* aPrevInterval,
     } else {
       PRInt32 beginPos = 0;
       tempBegin = GetNextGreaterOrEqual(mBeginInstances, beginAfter, beginPos);
-      if (!tempBegin || !tempBegin->Time().IsResolved())
-        return NS_ERROR_FAILURE;
+      if (!tempBegin || !tempBegin->Time().IsResolved()) {
+        return PR_FALSE;
+      }
     }
     NS_ABORT_IF_FALSE(tempBegin && tempBegin->Time().IsResolved() && 
         tempBegin->Time() >= beginAfter,
@@ -1560,7 +1560,7 @@ nsSMILTimedElement::GetNextInterval(const nsSMILInterval* aPrevInterval,
                                    mEndInstances.IsEmpty() ||
                                    EndHasEventConditions();
       if (!tempEnd && !openEndedIntervalOk)
-        return NS_ERROR_FAILURE; // Bad interval
+        return PR_FALSE; // Bad interval
 
       nsSMILTimeValue intervalEnd = tempEnd
                                   ? tempEnd->Time() : nsSMILTimeValue();
@@ -1588,19 +1588,19 @@ nsSMILTimedElement::GetNextInterval(const nsSMILInterval* aPrevInterval,
     if (tempEnd->Time() > zeroTime ||
        (tempBegin->Time() == zeroTime && tempEnd->Time() == zeroTime)) {
       aResult.Set(*tempBegin, *tempEnd);
-      return NS_OK;
+      return PR_TRUE;
     }
 
     if (mRestartMode == RESTART_NEVER) {
       // tempEnd <= 0 so we're going to loop which effectively means restarting
-      return NS_ERROR_FAILURE;
+      return PR_FALSE;
     }
 
     beginAfter = tempEnd->Time();
   }
   NS_NOTREACHED("Hmm... we really shouldn't be here");
 
-  return NS_ERROR_FAILURE;
+  return PR_FALSE;
 }
 
 nsSMILInstanceTime*
@@ -1803,10 +1803,7 @@ nsSMILTimedElement::UpdateCurrentInterval(PRBool aForceChangeNotice)
                                       ? mCurrentInterval->Begin()
                                       : nsnull;
   nsSMILInterval updatedInterval;
-  nsresult rv =
-    GetNextInterval(GetPreviousInterval(), beginTime, updatedInterval);
-
-  if (NS_SUCCEEDED(rv)) {
+  if (GetNextInterval(GetPreviousInterval(), beginTime, updatedInterval)) {
 
     if (mElementState == STATE_POSTACTIVE) {
 
